[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror-image-cli"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A CLI tool to mirror images horizontally or vertically."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.9.0,<1.0.0",
    "Pillow>=9.0.0,<11.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mirror-image" # Optional: Replace with your repo URL
"Bug Tracker" = "https://github.com/yourusername/mirror-image/issues" # Optional: Replace with your repo URL

[project.scripts]
mirror-image = "mirror_image:app"
