[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror-image-cli"
version = "0.1.0"
authors = [
  { name="ShinChven", email="shinchven@gmail.com" },
]
description = "A CLI tool to mirror images horizontally or vertically."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.9.0,<1.0.0",
    "Pillow>=9.0.0,<11.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ShinChven/mirror-image-cli"
"Bug Tracker" = "https://github.com/ShinChven/mirror-image-cli/issues"

[project.scripts]
mirror-image = "mirror_image:app"
